[project]
name = "junctions"
version = "0.1.0"
description = ""
authors = [{name = "James Thorniley", email="james.thorniley@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}

[tool.pytest.ini_options]
addopts = "--doctest-glob docs/*.md"

[tool.poetry]
name = "junctions"
version = "0.1.0"
description = ""
authors = ["James Thorniley <james.thorniley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyglet = "^2.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
ruff = "^0.0.282"
factory-boy = "^3.3.0"
imageio = "^2.31.1"

[tool.poetry.scripts]
viewer = "viewer:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
